# purpura

./: .pre-commit-config.yaml  pyproject.toml
.github/: ci.yaml  release.yaml  ruff.yaml
.github/workflows/: ci.yaml  codeql.yaml  publish.yaml
tests/: test_basic.py
